@@ -1,20 +1,23 @@
 package ru.practicum.mainService.service.impl.publics;
 
+import com.querydsl.core.types.dsl.BooleanExpression;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import ru.practicum.mainService.dto.event.EventFullDto;
 import ru.practicum.mainService.dto.event.EventMapper;
 import ru.practicum.mainService.model.Event;
+import ru.practicum.mainService.model.QEvent;
 import ru.practicum.mainService.repository.publics.PublicEventRepository;
-import ru.practicum.mainService.service.impl.EventCriteriaBuilder;
 import ru.practicum.mainService.service.publics.PublicEventService;
 import ru.practicum.mainService.service.stats.StatsEventService;
 
 import javax.servlet.http.HttpServletRequest;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -44,20 +47,28 @@ public class PublicEventServiceImpl implements PublicEventService {
 
         statsEventService.postStats(request);
 
-        Specification<Event> filter = EventCriteriaBuilder.byText(text)
-                .and(EventCriteriaBuilder.byCategories(categories))
-                .and(EventCriteriaBuilder.byPaid(paid))
-                .and(EventCriteriaBuilder.byStart(rangeStart))
-                .and(EventCriteriaBuilder.byEnd(rangeEnd))
-                .and(EventCriteriaBuilder.byAvailable(onlyAvailable));
+        List<Event> filteredEvents;
+        QEvent qEvent = QEvent.event;
+        BooleanExpression filter = qEvent.isNotNull();
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss", Locale.ROOT);
+        if (!text.isEmpty()) {
+            filter = filter.and(qEvent.annotation.toUpperCase().contains(text.toUpperCase()).or(qEvent.description.toUpperCase().contains(text.toUpperCase()).or(qEvent.title.toUpperCase().contains(text.toUpperCase()))));
+        }
 
-        Pageable page = PageRequest.of((from / size), size);
-
-        List<Event> events = repository.findAll(filter, page);
-        Map<Long, Long> stats = statsEventService.getStats(events, false);
-        statsEventService.postViews(stats, events);
-
-        return events.stream().map(EventMapper::toFullEventDto).collect(Collectors.toList());
+        if (categories != null) {
+            filter = filter.and(qEvent.category.id.in(categories));
+        }
+        if (paid != null) {
+            filter = filter.and(qEvent.paid.eq(paid));
+        }
+        if (rangeEnd != null && rangeStart != null) {
+            filter = filter.and(qEvent.eventDate.between(LocalDateTime.parse(rangeStart, formatter), LocalDateTime.parse(rangeEnd, formatter)));
+        }
+        Pageable pageRequest = PageRequest.of((from / size), size);
+        filteredEvents = repository.findAll(filter, pageRequest).toList();
+        Map<Long, Long> stats = statsEventService.getStats(filteredEvents, false);
+        statsEventService.postViews(stats, filteredEvents);
+        return filteredEvents.stream().map(EventMapper::toFullEventDto).collect(Collectors.toList());
     }
 
     @Override
